Add Minecraft 26.2 Support